--- a/wp-content/themes/ddevito-starter-theme/assets/sass/pages/_front-page.scss
+++ b/wp-content/themes/ddevito-starter-theme/assets/sass/pages/_front-page.scss
@@ -10,6 +10,7 @@
         padding-top: 0.5rem;
         h1{
           color: $dark-blue;
+          text-transform: uppercase;
           font-weight: 600;
         }
       }
