--- a/wp-content/themes/ddevito-starter-theme/assets/sass/_settings.scss
+++ b/wp-content/themes/ddevito-starter-theme/assets/sass/_settings.scss
@@ -45,6 +45,8 @@
 // 1. Global
 // ---------
 
+
+
 $foundation-palette: (
         primary: #448eb2,
         secondary: #2b2b2b,
@@ -57,7 +59,7 @@ $foundation-palette: (
 @include add-foundation-colors;
 
 $bodyFontFamily: 'Lato', sans-serif;
-$headerFontFamily: 'Roboto', sans-serif;
+$headerFontFamily: Arial;
 
 $global-width: rem-calc(1200);
 $global-font-size: 100%;
@@ -121,7 +123,7 @@ $block-grid-max: 8;
 // 4. Base Typography
 // ------------------
 
-$header-font-family: 'Roboto', sans-serif;
+$header-font-family: Arial;
 $header-font-weight: 300;
 $header-font-style: normal;
 $font-family-monospace: Consolas, 'Liberation Mono', Courier, monospace;
