update for 4-10-2017 (dev finished weekend before, day late on commit)

--- a/wp-content/themes/ddevito-starter-theme/assets/sass/base/_layout.scss
+++ b/wp-content/themes/ddevito-starter-theme/assets/sass/base/_layout.scss
@@ -109,8 +109,7 @@
 
   @include breakpoint(medium) {
     #main {
-      @include grid-column(8);
-      @include grid-column-position(center);
+      @include grid-column(12);
     }
   }
 }
@@ -156,8 +155,9 @@
 
   @include breakpoint(medium) {
     #main {
-      @include grid-column(8);
-      @include grid-column-position(center);
+      padding: 2rem;
+      background: $white;
+      @include grid-column(12);
     }
   }
 
