--- a/wp-content/themes/ddevito-starter-theme/assets/sass/pages/_archives.scss
+++ b/wp-content/themes/ddevito-starter-theme/assets/sass/pages/_archives.scss
@@ -9,9 +9,9 @@
 
   article,
   .site-main .widget_categories {
-    border-bottom: 1px solid #ddd;
-    padding: ($space /2) 0;
-    margin-bottom: $space /2;
+    //border-bottom: 1px solid #ddd;
+    //padding: ($space /2) 0;
+    //margin-bottom: $space /2;
 
   }
 
