--- a/wp-content/themes/ddevito-starter-theme/assets/sass/sections/_greySkew.scss
+++ b/wp-content/themes/ddevito-starter-theme/assets/sass/sections/_greySkew.scss
@@ -1,9 +1,9 @@
 
-#greySkew{
+#greySkew {
   display: none;
   position: absolute;
   top: 0;
-  left: -80%;
+  right: 60%;
   height: 100%;
   width: 100%;
   background: $gray;
