--- a/wp-content/themes/ddevito-starter-theme/assets/sass/pages/_front-page.scss
+++ b/wp-content/themes/ddevito-starter-theme/assets/sass/pages/_front-page.scss
@@ -180,7 +180,7 @@
   padding-bottom: 1rem;
   @include grid-column(12);
   h3{
-    text-align: center;
+    //text-align: center;
     text-transform: uppercase;
     font-size: 1.3rem;
     font-weight: 600;
