font and background banner updated (no more parallax)

--- a/wp-content/themes/ddevito-starter-theme/assets/sass/_settings.scss
+++ b/wp-content/themes/ddevito-starter-theme/assets/sass/_settings.scss
@@ -82,7 +82,7 @@ $white: #fff;
 $body-background: $white;
 $body-font-color: #464646;
 
-$body-font-family: 'Lato', sans-serif;
+$body-font-family: 'EB Garmond', serif;
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
