--- a/wp-content/themes/ddevito-starter-theme/assets/sass/sections/_header.scss
+++ b/wp-content/themes/ddevito-starter-theme/assets/sass/sections/_header.scss
@@ -127,3 +127,9 @@
     margin-left: auto;
   }
 }
+.menu a{
+  font-family: $header-font-family;
+}
+.frontPageTitleBar__wrap{
+  font-family: Arial;
+}
