--- a/wp-content/themes/ddevito-starter-theme/assets/sass/modules/_modules.scss
+++ b/wp-content/themes/ddevito-starter-theme/assets/sass/modules/_modules.scss
@@ -3,7 +3,7 @@
 /* ---------------------------------------------------------- */
 
 @import "header/contactBar";
-
+@import "donate-footer";
 /* ---------------------------------------------------------- */
 /* =======================  Navigation ======================= */
 /* ---------------------------------------------------------- */
