--- a/wp-content/themes/ddevito-starter-theme/assets/sass/sections/_header.scss
+++ b/wp-content/themes/ddevito-starter-theme/assets/sass/sections/_header.scss
@@ -44,6 +44,7 @@
     max-width: 200px;
   }
   .headerText{
+    position: relative;
     h1, h6{color: $white;margin-bottom: 0;text-align: center}
     h6{padding-top: 0;}
   }
