--- a/wp-content/themes/ddevito-starter-theme/assets/sass/pages/_front-page.scss
+++ b/wp-content/themes/ddevito-starter-theme/assets/sass/pages/_front-page.scss
@@ -187,12 +187,26 @@
     font-weight: 600;
     margin-bottom: 0.40rem;
   }
+  .imageWrap{
+    height: 10rem;
+    width: 100%;
+    -webkit-background-size: cover!important;
+    background-size: cover!important;
+    margin-bottom: 8px;
+    @include breakpoint(large){
+      height: 12rem;
+      @media(min-width: 1200px){
+        height: 14rem;
+      }
+    }
+  }
   img{
     padding-bottom: 12px;
   }
   p{
     color: #000!important;
     line-height: 20px!important;
+    padding-left: 5px;
   }
 }
 @include breakpoint(medium){
