--- a/wp-content/themes/ddevito-starter-theme/assets/sass/pages/_front-page.scss
+++ b/wp-content/themes/ddevito-starter-theme/assets/sass/pages/_front-page.scss
@@ -82,6 +82,14 @@
     .featured-item{
       position: relative;
       margin-bottom: 2rem;
+      &.item-1{
+        h3{
+          line-height: 24px!important;
+          display: block!important;
+          -webkit-line-clamp: 3!important;
+        }
+
+      }
       .title, .colour-bar{
         z-index: 1;
       }
@@ -97,10 +105,12 @@
         font-size: 1.3rem;
         overflow: hidden;
         display: -webkit-box;
-        -webkit-line-clamp: 1;
+        -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
         text-overflow: ellipsis;
+        line-height: 20px;
       }
+
       h3,p{
         margin-bottom: 0;
       }
@@ -200,9 +210,10 @@
     margin-bottom: 0.40rem;
     overflow: hidden;
     display: -webkit-box;
-    -webkit-line-clamp: 1;
+    -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     text-overflow: ellipsis;
+    line-height: 20px;
   }
   .imageWrap{
     height: 10rem;
