--- a/wp-content/themes/ddevito-starter-theme/assets/sass/pages/_blog-post-cat-landing.scss
+++ b/wp-content/themes/ddevito-starter-theme/assets/sass/pages/_blog-post-cat-landing.scss
@@ -14,6 +14,8 @@
       color: #000;
       padding-top: 0;
       font-weight: 600;
+      line-height: 40px;
+      padding-top: 7px;
     }
     @include breakpoint(medium){
       width: 90%;
