--- a/wp-content/themes/ddevito-starter-theme/assets/sass/pages/_blog-post-cat-landing.scss
+++ b/wp-content/themes/ddevito-starter-theme/assets/sass/pages/_blog-post-cat-landing.scss
@@ -8,6 +8,13 @@
       margin-bottom: -10px;
       text-transform: uppercase;
     }
+    .featuredContent{
+      overflow: hidden;
+      display: -webkit-box;
+      -webkit-line-clamp: 4;
+      -webkit-box-orient: vertical;
+      text-overflow: ellipsis;
+    }
     .postCatDesc{
       font-size: 2.5rem;
       text-transform: uppercase;
