--- a/wp-content/themes/ddevito-starter-theme/assets/sass/pages/_about.scss
+++ b/wp-content/themes/ddevito-starter-theme/assets/sass/pages/_about.scss
@@ -4,7 +4,12 @@
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
     @include grid-row();
-    h1{@include grid-column(12);font-size: 2.4rem}
+    h1{@include grid-column(12);font-size: 2.4rem;
+    @include breakpoint(large){
+      @include grid-column-offset(1);
+      @include grid-column(10);
+    }
+    }
     .hasBg{
       color: $white;
     }
@@ -40,17 +45,11 @@
   .about-page-content__inner{
     @include grid-column(12);
   }
-  @include breakpoint(medium){
-    .about-page-content__inner{
-      @include grid-column(8);
-    }
-    .about-page-sidebar{
-      @include grid-column(4);
-      display: block;
-    }
-  }
   @include breakpoint(large){
-
+    .about-page-content__inner{
+      @include grid-column-offset(1);
+      @include grid-column(10);
+    }
   }
 }
 
