--- a/wp-content/themes/ddevito-starter-theme/assets/sass/pages/_front-page.scss
+++ b/wp-content/themes/ddevito-starter-theme/assets/sass/pages/_front-page.scss
@@ -1,6 +1,7 @@
 .frontpage-content-wrap{
   @include grid-row();
   .frontpage-content-inner{
+    a{color: $black;}
     @include grid-column(12);
     background: #fff;
     .banner-wrap{
