--- a/wp-content/themes/ddevito-starter-theme/assets/sass/pages/_posts-page.scss
+++ b/wp-content/themes/ddevito-starter-theme/assets/sass/pages/_posts-page.scss
@@ -114,14 +114,26 @@
             -webkit-box-orient: vertical;
             padding-right: 0;
             h4 {
+              display: -webkit-box;
+              -webkit-line-clamp: 2;
+              -webkit-box-orient: vertical;
+              padding-right: 0;
               margin-bottom: 0;
               font-size: 1.2rem;
               font-weight: bold;
               text-transform: uppercase;
+              overflow: hidden;
+
             }
             p {
+              display: -webkit-box;
+              -webkit-line-clamp: 2;
+              -webkit-box-orient: vertical;
+              padding-right: 0;
               color: $black;
               margin-bottom: 0;
+              overflow: hidden;
+
             }
           }
         }
