--- a/wp-content/themes/ddevito-starter-theme/assets/sass/pages/_front-page.scss
+++ b/wp-content/themes/ddevito-starter-theme/assets/sass/pages/_front-page.scss
@@ -104,11 +104,10 @@
         font-weight: 600;
         font-family: $headerFontFamily;
         font-size: 1.3rem;
-        overflow: hidden;
-        display: -webkit-box;
-        -webkit-line-clamp: 4;
-        -webkit-box-orient: vertical;
-        text-overflow: ellipsis;
+        //overflow: hidden;
+        //display: -webkit-box;
+        //-webkit-line-clamp: 4;
+        //-webkit-box-orient: vertical;
         line-height: 20px;
       }
 
@@ -123,7 +122,7 @@
         text-overflow: ellipsis;
       }
       .title{
-        height: 105px;
+        height: 125px;
         padding: 10px;
       }
       .colour-bar{
@@ -162,11 +161,11 @@
     }
     .featured-item:nth-of-type(2){
       .title{
-        background: rgba(0,0,0,0.3);
+        background: $green;
 
       }
       h3{
-        color: #91c449;
+        color: #fff;
       }
       .colour-bar{
         background: #91c449;
@@ -174,11 +173,11 @@
     }
     .featured-item:nth-of-type(3){
       .title{
-        background: rgba(0,0,0,0.4);
+        background: $orange;
 
       }
       h3{
-        color: #db492d;
+        color: #fff;
       }
       .colour-bar{
         background: #db492d;
@@ -186,11 +185,11 @@
     }
     .featured-item:nth-of-type(4) {
       .title{
-        background: rgba(0,0,0,0.5);
+        background: $yellow;
 
       }
       h3{
-        color: #f1af38;
+        color: #fff;
       }
       .colour-bar{
         background: #f1af38;
@@ -214,7 +213,7 @@
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     text-overflow: ellipsis;
-    line-height: 20px;
+    line-height: 21px;
   }
   .imageWrap{
     height: 10rem;
