--- a/wp-content/themes/ddevito-starter-theme/assets/sass/sections/_header.scss
+++ b/wp-content/themes/ddevito-starter-theme/assets/sass/sections/_header.scss
@@ -4,7 +4,9 @@
     .siteSubHeaderInner{
       @include grid-row();
     }
-    background: $light-blue;
+    background: transparent;
+    border-top: 1px solid $dark-blue;
+    border-bottom: 1px solid $dark-blue;
     .search-bar-wrap{
       text-align: center;
       form{
@@ -15,12 +17,15 @@
           width: 250px;
           margin-top: 10px;
           margin-bottom: 10px;
+          border: 1px solid $dark-blue;
+
         }
+
         button{
           position: absolute;
           top: 17.5px;
           right: 6px;
-          color: $primary-color;
+          color: $dark-blue;
           cursor: pointer;
         }
       }
@@ -28,12 +33,15 @@
     }
   }
   .site-header__inner {
-    background: $dark-blue;
+    background: transparent;
+    color: $dark-blue;
     .siteHeaderInnerWrap{
       @include grid-row();
       .headerText h1{
         display: none;
-
+      }
+      h1,h6{
+        color: $dark-blue;
       }
     }
     padding: ($space /4) 0;
@@ -46,7 +54,7 @@
   .headerText{
     position: relative;
     h1, h6{color: $white;margin-bottom: 0;text-align: center}
-    h6{padding-top: 0;}
+    h6{padding-top: 0;font-weight: 600}
   }
   .site-title {
     margin-bottom: 0;
@@ -83,10 +91,10 @@
 
     .siteSubHeader{
       .primaryMenu{
-        @include grid-column(7);
+        @include grid-column(8);
       }
       .search-bar-wrap{
-        @include grid-column(5);
+        @include grid-column(4);
         text-align: right;
         input[type='search']{
           float: right;
@@ -101,8 +109,8 @@
         margin-top: 0.55rem;
         nav{padding-top: 0;float: left;}
         li a{
-          color: $white;
-          padding: 0.7rem 1.85rem;
+          color: $dark-blue;
+          padding: 0.7rem 0.9rem;
           font-weight: 600;
           &:hover{
             background: #a5def4;
@@ -133,4 +141,8 @@
 }
 .frontPageTitleBar__wrap{
   font-family: Arial;
+}
+
+.title-bar{
+  background: $dark-blue;
 }
