bug fixes for design

--- a/wp-content/themes/ddevito-starter-theme/assets/sass/pages/_blog-post-cat-landing.scss
+++ b/wp-content/themes/ddevito-starter-theme/assets/sass/pages/_blog-post-cat-landing.scss
@@ -1,5 +1,5 @@
 .archive.category{
-  main{background: $white;padding:1.5rem!important;}
+  main{background: $white;padding: 0 1.5rem!important;}
   .page-header{
     background: $white;
     .postCatTitle{
