--- a/wp-content/themes/ddevito-starter-theme/assets/sass/sections/_footer.scss
+++ b/wp-content/themes/ddevito-starter-theme/assets/sass/sections/_footer.scss
@@ -43,10 +43,15 @@
     }
   }
 }
-
+.page-template-about-us{
+  .siteFooter__inner{
+    display: block!important;
+  }
+}
 .siteFooter {
   font-family: Arial;
   .siteFooter__inner {
+    display: none;
     @include grid-row();
     padding-top: 1rem;
     padding-bottom: 1rem;
