--- a/wp-content/themes/ddevito-starter-theme/assets/sass/_settings.scss
+++ b/wp-content/themes/ddevito-starter-theme/assets/sass/_settings.scss
@@ -58,8 +58,7 @@ $foundation-palette: (
 
 @include add-foundation-colors;
 
-$bodyFontFamily: 'Lato', sans-serif;
-$headerFontFamily: Arial;
+
 
 $global-width: rem-calc(1200);
 $global-font-size: 100%;
@@ -81,7 +80,7 @@ $white: #fff;
 $body-background: $white;
 $body-font-color: #464646;
 
-$body-font-family: 'EB Garmond', serif;
+$body-font-family: adobe-garamond-pro;
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
@@ -122,7 +121,7 @@ $block-grid-max: 8;
 // 4. Base Typography
 // ------------------
 
-$header-font-family: Arial;
+$header-font-family: proxima-nova;
 $header-font-weight: 300;
 $header-font-style: normal;
 $font-family-monospace: Consolas, 'Liberation Mono', Courier, monospace;
@@ -572,3 +571,5 @@ $topbar-background: transparent;
 $topbar-link-color: #fff;
 $topbar-input-width: 200px;
 
+$bodyFontFamily: $body-font-family;
+$headerFontFamily: $header-font-family;
