--- a/wp-content/themes/ddevito-starter-theme/assets/sass/sections/_header.scss
+++ b/wp-content/themes/ddevito-starter-theme/assets/sass/sections/_header.scss
@@ -77,11 +77,19 @@
       .logo {
         @include grid-column(3);
         text-align: left;
+        img{
+          width: 250px;
+          max-width: none;
+        }
       }
       .headerText {
         @include grid-column(9);
+        @include breakpoint(large){
+          margin-top: 23px;
+        }
         h1{
           display: block!important;margin-bottom: -10px;
+          font-weight: 600;
         }
         h1,h6{
           text-align: right;
