buttons and post page fix

--- a/wp-content/themes/ddevito-starter-theme/assets/sass/base/_buttons.scss
+++ b/wp-content/themes/ddevito-starter-theme/assets/sass/base/_buttons.scss
@@ -5,11 +5,14 @@ input[type="button"] {
 
 
 .button{
-  background: transparent!important;
+  background: transparent !important;
   color: $secondary-color!important;
   text-transform: uppercase;
   font-family: proxima-nova;
   font-size: 18px;
+  font-weight: 600;
+  padding: 0;
+  margin-bottom: 15px;
   &:hover{
     background: transparent!important;
     color: $primary-color!important;
