--- a/wp-content/themes/ddevito-starter-theme/assets/sass/pages/_posts-page.scss
+++ b/wp-content/themes/ddevito-starter-theme/assets/sass/pages/_posts-page.scss
@@ -81,6 +81,9 @@
       }
 
       .singlePostSidebar{
+        a{
+          color: #222;
+        }
         @include grid-column(12);
         h3{
           font-weight: bold;
