--- a/wp-content/themes/ddevito-starter-theme/assets/sass/modules/navigation/_navigation-lean-submodule.scss
+++ b/wp-content/themes/ddevito-starter-theme/assets/sass/modules/navigation/_navigation-lean-submodule.scss
@@ -55,7 +55,7 @@
 
 
     .is-dropdown-submenu {
-      background: transparentize($secondary-color, 0.2);
+      background: #fff;
     }
 
     .dropdown.menu>li.is-dropdown-submenu-parent>a {
@@ -63,7 +63,7 @@
     }
 
     .dropdown.menu>li.is-dropdown-submenu-parent>a::after {
-      border-color: #fff transparent transparent;
+      border-color: $dark-blue transparent transparent;
       margin-right: 10px;
       margin-left: 10px;
     }
