--- a/wp-content/themes/ddevito-starter-theme/assets/sass/sections/_header.scss
+++ b/wp-content/themes/ddevito-starter-theme/assets/sass/sections/_header.scss
@@ -49,7 +49,6 @@
 
   .logo {
     text-align: center;
-    max-width: 300px;
   }
   .headerText{
     position: relative;
@@ -75,15 +74,18 @@
   @include breakpoint(large) {
     .site-header__inner{
       .logo {
-        @include grid-column(3);
+        @include grid-column(5);
         text-align: left;
         img{
-          width: 300px;
+          width: 195px;
           max-width: none;
+          @media (min-width: 1200px) {
+            width: 225px;
+          }
         }
       }
       .headerText {
-        @include grid-column(9);
+        @include grid-column(7);
         @include breakpoint(large){
           margin-top: 23px;
         }
